# wifi-heat-mapper

./: .flake8  .gitattributes  .gitignore  .gitmodules  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: linting.yml  package-compat.yml  run-linting.sh
examples/: .gitignore  SAMPLE.md  floor-plan.ai
mobile/: .metadata  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: CMakeLists.txt  iperf_config.h  version.h.in
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart  mobile.dart
mobile/lib/src/app/: app.dart  platform_route.dart  platform_theme.dart  theme_mode_controller.dart
mobile/lib/src/core/: app_messages.dart  loading_indicator.dart  material_spacing.dart
mobile/lib/src/core/ui/: app_tokens.dart  app_widgets.dart
mobile/lib/src/features/app_shell/: site_shell_page.dart
mobile/lib/src/features/connect/: server_connect_page.dart  server_connection_controller.dart  server_connection_state.dart
mobile/lib/src/features/measurements/: internet_speed_test_service.dart  internet_speed_test_settings_controller.dart  local_measurement_service.dart  local_measurement_settings_controller.dart  measurement_chime_controller.dart  measurement_scope_controller.dart  measurement_setup_controller.dart  measurement_setup_page.dart  measurements_page.dart  wifi_metadata_service.dart
mobile/lib/src/features/sites/: sites_page.dart
mobile/lib/src/models/: device_identity.dart  floor_map.dart  internet_measurement_result.dart  project_summary.dart  server_info.dart  site_detail.dart  site_point.dart  site_summary.dart  wifi_metadata.dart
mobile/lib/src/services/: device_identity_service.dart  server_api.dart
mobile/lib/src/storage/: app_preferences.dart
mobile/test/: mobile_test.dart
server/: .env.example  README.md  package-lock.json  package.json  svelte.config.js
server/db/migrations/: 001_initial_schema.sql
server/scripts/: migrate.ts
server/src/lib/server/: readiness.ts  version.ts
server/src/routes/: +page.server.ts  +page.svelte
wifi_heat_mapper/: _version.py  config.py  debugger.py  graph.py  gui.py  main.py  misc.py  scan.py
(+28 files in other folders)
