[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "versioneer[toml]==0.29"
]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 0

[tool.ruff]
target-version = "py310"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "wifi_heat_mapper/_version.py"
versionfile_build = "wifi_heat_mapper/_version.py"
tag_prefix = ""
parentdir_prefix = "wifi_heat_mapper-"
